[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Yagitudeh.otf" type="DynamicFontData" id=1]
[ext_resource path="res://goal_controller/goal_controller.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/goal_button.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "collapse"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 1024, 20 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 920, 20 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 27.3961, 26.5851 )

[node name="GoalControllerLayer" type="CanvasLayer"]
pause_mode = 2

[node name="GoalController" type="Node2D" parent="." groups=[
"goal_controller",
]]
pause_mode = 2
script = ExtResource( 2 )

[node name="Score" type="RichTextLabel" parent="GoalController"]
visible = false
margin_left = 20.0
margin_top = 18.595
margin_right = 283.0
margin_bottom = 53.595
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
text = "Score: 0"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="VBoxContainer" parent="GoalController"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1024.0
margin_top = 20.0
margin_right = 1272.0
margin_bottom = 196.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalContainer" type="GridContainer" parent="GoalController/Popup"]
margin_right = 248.0
margin_bottom = 64.0
rect_min_size = Vector2( 248, 64 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="GoalController/Popup"]
visible = false
margin_top = 68.0
margin_right = 248.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 5 )
text = "Next"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="GoalController/Popup"]
visible = false
margin_top = 68.0
margin_right = 248.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 5 )
text = "Menu"
align = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="GoalController/Popup"]
autoplay = "collapse"
anims/collapse = SubResource( 2 )
anims/pop_in = SubResource( 3 )

[node name="GoalSprite" type="Sprite" parent="GoalController"]
position = Vector2( 984, 37.5 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="GoalController/GoalSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalController/GoalSprite/Area2D"]
shape = SubResource( 6 )

[connection signal="pressed" from="GoalController/Popup/NextLevel" to="GoalController" method="_on_NextLevel_pressed"]
[connection signal="pressed" from="GoalController/Popup/Menu" to="GoalController" method="_on_Menu_pressed"]
[connection signal="input_event" from="GoalController/GoalSprite/Area2D" to="GoalController" method="_on_Area2D_input_event"]
